--- a/install
+++ b/install
@@ -8,7 +8,8 @@ if [ "$#" -ne 0 ]; then
 fi
 
 # Disable CDPATH so that "cd" behaves predictably even if the user has a
-# custom search path configured in their environment.
+# custom search path configured in their environment.  This keeps the script
+# portable across login shells that set CDPATH to multiple directories.
 unset CDPATH
 
 REQUIRED_REL_DIRS="spells spells/cantrips spells/menu"
@@ -41,187 +42,134 @@ fi
 cleanup_bootstrap() {
         # Clean up any temporary directory created during the download process.
         if [ -n "${BOOTSTRAP_TMP_DIR-}" ] && [ -d "$BOOTSTRAP_TMP_DIR" ]; then
-        rm -rf "$BOOTSTRAP_TMP_DIR"
+                rm -rf "$BOOTSTRAP_TMP_DIR"
         fi
 }
 
+# Remote installs create a throwaway working directory; trap its cleanup so
+# shells on every platform remove the temporary files even if the install
+# process exits early.
 trap 'cleanup_bootstrap' EXIT HUP INT TERM
 
 download_file() {
-        # Fetch a remote archive using curl or wget, whichever is available.
+        # Fetch a remote archive using curl or wget, whichever is available on the
+        # host platform.  Some of our supported OS images only ship one of the two
+        # tools by default, so we try both before giving up.
         dest=$1
         url=$2
         if command -v curl >/dev/null 2>&1; then
-        if curl -fsSL "$url" -o "$dest"; then
-        return 0
-        fi
+                if curl -fsSL "$url" -o "$dest"; then
+                        return 0
+                fi
         fi
         if command -v wget >/dev/null 2>&1; then
-        if wget -qO "$dest" "$url"; then
-        return 0
-        fi
+                if wget -qO "$dest" "$url"; then
+                        return 0
+                fi
         fi
         printf '%s\n' "Error: Neither curl nor wget is available to download wizardry." >&2
         return 1
 }
 
-expand_home() {
-        # Expand a leading ~ into the user's HOME so prompts can accept shortcuts.
-        value=$1
-        case $value in
-        ~)
-        if [ -z "${HOME-}" ]; then
-        printf '%s\n' "Error: HOME is not set; cannot expand '~'." >&2
-        return 1
-        fi
-        printf '%s\n' "$HOME"
-        ;;
-        ~/*)
-        if [ -z "${HOME-}" ]; then
-        printf '%s\n' "Error: HOME is not set; cannot expand '~'." >&2
-        return 1
-        fi
-        printf '%s/%s\n' "$HOME" "${value#~/}"
-        ;;
-        *)
-        printf '%s\n' "$value"
-        ;;
-        esac
-}
-
-absolute_path() {
-        # Convert a user-supplied path (which may be relative) into an absolute path
-        # so later commands can safely change directories.
-        input=$1
-        expanded=$(expand_home "$input") || return 1
-        case $expanded in
-        /*)
-        printf '%s\n' "$expanded"
-        ;;
-        *)
-        cwd=$(pwd -P)
-        printf '%s/%s\n' "$cwd" "$expanded"
-        ;;
-        esac
-}
-
-prompt_install_dir() {
-        # Ask the user where wizardry should live, defaulting to ~/.tower. When
-        # running non-interactively (for example via wget | sh), the prompt falls back
-        # to the default automatically so the installer keeps moving.
-        default_choice=$1
-        if [ -z "$default_choice" ]; then
-        printf '%s\n' "Error: No default install location could be determined." >&2
-        return 1
-        fi
-
-        if [ -n "${WIZARDRY_INSTALL_DIR-}" ]; then
-        printf '%s\n' "$WIZARDRY_INSTALL_DIR"
-        return 0
-        fi
-
-        if [ -n "${WIZARDRY_ROOT-}" ]; then
-        printf '%s\n' "$WIZARDRY_ROOT"
-        return 0
-        fi
-
-        message="Where should wizardry be installed? [$default_choice] "
+INSTALL_INPUT=""
+if [ -n "${WIZARDRY_INSTALL_DIR-}" ]; then
+        INSTALL_INPUT=$WIZARDRY_INSTALL_DIR
+elif [ -n "${WIZARDRY_ROOT-}" ]; then
+        INSTALL_INPUT=$WIZARDRY_ROOT
+else
+        message="Where should wizardry be installed? [$PROMPT_DEFAULT] "
         if [ -t 0 ]; then
-        # Print the prompt to stderr so command substitutions that capture the
-        # chosen install path do not swallow the question itself.
-        printf '%s' "$message" >&2
-        IFS= read -r response
+                # Print the prompt to stderr so the question is visible even if stdout is
+                # captured inside a subshell.
+                printf '%s' "$message" >&2
+                IFS= read -r INSTALL_INPUT
         else
-        printf '%s\n' "Info: No interactive input detected; using '$default_choice'." >&2
-        response=
+                printf '%s\n' "Info: No interactive input detected; using '$PROMPT_DEFAULT'." >&2
         fi
+fi
 
-        if [ -z "$response" ]; then
-        response=$default_choice
-        fi
-        printf '%s\n' "$response"
-}
+if [ -z "$INSTALL_INPUT" ]; then
+        INSTALL_INPUT=$PROMPT_DEFAULT
+fi
 
-bootstrap_remote_tree() {
-        # Download the wizardry tarball, unpack it, and move it into the requested
-        # installation directory.
-        target=$1
+case $INSTALL_INPUT in
+        ~)
+                if [ -z "${HOME-}" ]; then
+                        printf '%s\n' "Error: HOME is not set; cannot expand '~'." >&2
+                        exit 1
+                fi
+                INSTALL_INPUT=$HOME
+                ;;
+        ~/*)
+                if [ -z "${HOME-}" ]; then
+                        printf '%s\n' "Error: HOME is not set; cannot expand '~'." >&2
+                        exit 1
+                fi
+                INSTALL_INPUT=$HOME/${INSTALL_INPUT#\~/}
+                ;;
+esac
+
+case $INSTALL_INPUT in
+        /*)
+                INSTALL_DIR=$INSTALL_INPUT
+                ;;
+        *)
+                cwd=$(pwd -P)
+                INSTALL_DIR=$cwd/$INSTALL_INPUT
+                ;;
+esac
+
+if [ -d "$INSTALL_DIR/spells" ]; then
+        ABS_DIR=$(cd "$INSTALL_DIR" && pwd -P)
+else
+        # We need to bootstrap wizardry by downloading a tarball.  Each supported
+        # platform provides tar, but some only ship curl or wget, so the
+        # download_file helper above checks both before failing.
         archive_url=${WIZARDRY_REMOTE_ARCHIVE-https://github.com/andersaamodt/wizardry/archive/refs/heads/main.tar.gz}
-
-        if [ -d "$target/spells" ]; then
-        (cd "$target" && pwd -P)
-        return 0
+        if [ -e "$INSTALL_DIR" ]; then
+                printf '%s\n' "Error: '$INSTALL_DIR' already exists but does not look like wizardry." >&2
+                exit 1
         fi
-
-        if [ -e "$target" ]; then
-        printf '%s\n' "Error: '$target' already exists but does not look like wizardry." >&2
-        return 1
-        fi
-
         if ! command -v tar >/dev/null 2>&1; then
-        printf '%s\n' "Error: tar is required to unpack wizardry when installing remotely." >&2
-        return 1
+                printf '%s\n' "Error: tar is required to unpack wizardry when installing remotely." >&2
+                exit 1
         fi
-
-        BOOTSTRAP_TMP_DIR=$(mktemp -d "${TMPDIR:-/tmp}/wizardry-install.XXXXXX") || return 1
+        BOOTSTRAP_TMP_DIR=$(mktemp -d "${TMPDIR:-/tmp}/wizardry-install.XXXXXX") || exit 1
         archive="$BOOTSTRAP_TMP_DIR/wizardry.tar.gz"
-
-        printf '%s\n' "Downloading wizardry to '$target'..."
+        printf '%s\n' "Downloading wizardry to '$INSTALL_DIR'..."
         if ! download_file "$archive" "$archive_url"; then
-        return 1
+                exit 1
         fi
-
         if ! tar -xzf "$archive" -C "$BOOTSTRAP_TMP_DIR"; then
-        printf '%s\n' "Error: Failed to unpack wizardry archive." >&2
-        return 1
+                printf '%s\n' "Error: Failed to unpack wizardry archive." >&2
+                exit 1
         fi
-
-        extracted=
+        extracted=""
         for candidate in "$BOOTSTRAP_TMP_DIR"/*; do
-        if [ -d "$candidate/spells" ]; then
-        extracted=$candidate
-        break
-        fi
+                if [ -d "$candidate/spells" ]; then
+                        extracted=$candidate
+                        break
+                fi
         done
-
         if [ -z "$extracted" ]; then
-        printf '%s\n' "Error: Downloaded archive did not contain wizardry spells." >&2
-        return 1
+                printf '%s\n' "Error: Downloaded archive did not contain wizardry spells." >&2
+                exit 1
         fi
-
-        parent=${target%/*}
-        if [ "$parent" = "$target" ]; then
-        parent=.
+        parent=${INSTALL_DIR%/*}
+        if [ "$parent" = "$INSTALL_DIR" ]; then
+                parent=.
         fi
         if ! mkdir -p "$parent"; then
-        printf '%s\n' "Error: Unable to create directory '$parent'." >&2
-        return 1
+                printf '%s\n' "Error: Unable to create directory '$parent'." >&2
+                exit 1
         fi
-
-        if ! mv "$extracted" "$target"; then
-        printf '%s\n' "Error: Unable to move wizardry into '$target'." >&2
-        return 1
+        if ! mv "$extracted" "$INSTALL_DIR"; then
+                printf '%s\n' "Error: Unable to move wizardry into '$INSTALL_DIR'." >&2
+                exit 1
         fi
-
-        printf '%s\n' "Wizardry downloaded to '$target'."
-        (cd "$target" && pwd -P)
-}
-
-resolve_install_root() {
-        # Accept the requested path, use it if the spells exist, or fall back to a
-        # remote download.
-        req=$1
-        if [ -d "$req/spells" ]; then
-        (cd "$req" && pwd -P)
-        return 0
-        fi
-
-        bootstrap_remote_tree "$req"
-}
-
-INSTALL_INPUT=$(prompt_install_dir "$PROMPT_DEFAULT") || exit 1
-INSTALL_DIR=$(absolute_path "$INSTALL_INPUT") || exit 1
-ABS_DIR=$(resolve_install_root "$INSTALL_DIR") || exit 1
+        printf '%s\n' "Wizardry downloaded to '$INSTALL_DIR'."
+        ABS_DIR=$(cd "$INSTALL_DIR" && pwd -P)
+fi
 
 # Now that the wizardry tree is available, point at the helper spells we rely
 # on to update PATH entries and ask for confirmation.
@@ -268,39 +216,27 @@ do
         printf '  %s\n' "$dir"
 done
 
-confirm_install() {
-	if [ "${WIZARDRY_INSTALL_ASSUME_YES-}" = "1" ]; then
-		return 0
-	fi
+# Confirm with the user (or their automation) before editing their shell
+# startup files.  When stdin is not interactive we fall back to the
+# non-blocking ASK_CANTRIP_INPUT=none pathway so wget|sh installs do not hang.
+proceed=0
+if [ "${WIZARDRY_INSTALL_ASSUME_YES-}" = "1" ]; then
+        proceed=1
+else
+        if [ ! -t 0 ] && [ -z "${ASK_CANTRIP_INPUT-}" ]; then
+                if ASK_CANTRIP_INPUT=none "$ASK_YN" "Proceed with installation?" yes >/dev/null; then
+                        proceed=1
+                fi
+        else
+                if "$ASK_YN" "Proceed with installation?" yes >/dev/null; then
+                        proceed=1
+                fi
+        fi
+fi
 
-	if [ ! -t 0 ] && [ -z "${ASK_CANTRIP_INPUT-}" ]; then
-		if ASK_CANTRIP_INPUT=none "$ASK_YN" "Proceed with installation?" yes >/dev/null; then
-			return 0
-		fi
-		return 1
-	fi
-
-	if "$ASK_YN" "Proceed with installation?" yes >/dev/null; then
-		return 0
-	fi
-
-	return 1
-}
-
-filter_memorize_output() {
-	while IFS= read -r line; do
-		case $line in
-		"memorize: Skipping"*)
-			continue
-			;;
-		esac
-		printf '%s\n' "$line"
-	done
-}
-
-if ! confirm_install; then
-	printf '%s\n' "Ok, well the mud won't work until you install it by adding the spells directory to your PATH."
-	exit 1
+if [ "$proceed" -ne 1 ]; then
+        printf '%s\n' "Ok, well the mud won't work until you install it by adding the spells directory to your PATH."
+        exit 1
 fi
 
 for dir
@@ -308,17 +244,20 @@ do
         "$PATH_WIZARD" -r add "$dir" || exit 1
 done
 
+# Memorizing spells pre-compiles wizardry's menus.  The memorization spell
+# prints helpful skip messages when run directly, but the installer filters
+# them out so only successes and real problems reach the console.
 mem_status=0
 if [ -x "$MEMORIZE" ]; then
-	mem_log=$(mktemp "${TMPDIR:-/tmp}/wizardry-memorize.XXXXXX") || exit 1
-	if "$MEMORIZE" --recursive "$ABS_DIR/spells" >"$mem_log" 2>&1; then
-		filter_memorize_output <"$mem_log"
-		printf '%s\n' "Spells memorized successfully."
-	else
-		mem_status=$?
-		filter_memorize_output <"$mem_log" >&2 || true
-	fi
-	rm -f "$mem_log"
+        mem_log=$(mktemp "${TMPDIR:-/tmp}/wizardry-memorize.XXXXXX") || exit 1
+        if "$MEMORIZE" --recursive "$ABS_DIR/spells" >"$mem_log" 2>&1; then
+                sed '/^memorize: Skipping/d' "$mem_log"
+                printf '%s\n' "Spells memorized successfully."
+        else
+                mem_status=$?
+                sed '/^memorize: Skipping/d' "$mem_log" >&2 || true
+        fi
+        rm -f "$mem_log"
 else
         printf '%s\n' "Warning: memorize spell is missing; skipping automatic memorization." >&2
 fi
